# AppvoyerDeploy

./: .appveyor.yml  CMakeLists.txt
include/: main.h
src/: main.cpp
